refactor: improve test implementation
- fix product update test based on changes from previous commit
- remove unnecessary auxiliary methods that cause problems due to their scope
- add mocks and their verifications